tested tissue attribute parsing on main xml file

--- a/biosamples_tissue.ipynb
+++ b/biosamples_tissue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 127,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-08T14:40:43.410429400Z",
@@ -20,7 +20,8 @@
     "# from rapidfuzz import fuzz\n",
     "import rapidfuzz\n",
     "import pprint\n",
-    "import time"
+    "import time\n",
+    "import csv"
    ]
   },
   {
@@ -14748,6 +14749,113 @@
    "metadata": {},
    "source": [
     "----\n",
+    "# Attribute handler for biosample_set.xml\n",
+    "- same code as above but run on the whole set\n",
+    "- code writes the found information to a csv file in order to not overload memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BioSamplesAttributeHandler(xml.sax.ContentHandler):\n",
+    "    def __init__(self, attributes_set) -> None:\n",
+    "        super().__init__()\n",
+    "        self.attributes_set = attributes_set\n",
+    "        self.biosample_id = \"\"\n",
+    "        self.attribute_name = \"\"\n",
+    "        self.biosample_count = 0\n",
+    "        \n",
+    "        with open(\"data/biosamples/results/biosamples_tissue.csv\", \"w\") as f:\n",
+    "            writer = csv.writer(f)\n",
+    "            writer.writerow([\"biosample_id\", \"tissue\"])\n",
+    "\n",
+    "    def startElement(self, name, attrs):\n",
+    "        if name == \"BioSample\":\n",
+    "            self.biosample_id = attrs[\"id\"]\n",
+    "            self.biosample_count += 1\n",
+    "            if self.biosample_count % 1000000 == 0:\n",
+    "                print(\"Number of biosamples processed: \", self.biosample_count)\n",
+    "                \n",
+    "        elif name == \"Attribute\" and \"harmonized_name\" in attrs:\n",
+    "            attribute_name = attrs[\"harmonized_name\"]\n",
+    "            if attribute_name in self.attributes_set:\n",
+    "                self.attribute_name = attribute_name\n",
+    "\n",
+    "    def characters(self, content):\n",
+    "        if self.attribute_name != \"\":\n",
+    "            with open(\"data/biosamples/results/biosamples_tissue.csv\", \"a\") as f:\n",
+    "                writer = csv.writer(f)\n",
+    "                writer.writerow([self.biosample_id, content])\n",
+    "            self.attribute_name = \"\"\n",
+    "\n",
+    "    def endDocument(self):\n",
+    "        print(\"Finished writing to file\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of biosamples processed:  1000000\n",
+      "Number of biosamples processed:  2000000\n",
+      "Number of biosamples processed:  3000000\n",
+      "Number of biosamples processed:  4000000\n",
+      "Number of biosamples processed:  5000000\n",
+      "Number of biosamples processed:  6000000\n",
+      "Number of biosamples processed:  7000000\n",
+      "Number of biosamples processed:  8000000\n",
+      "Number of biosamples processed:  9000000\n",
+      "Number of biosamples processed:  10000000\n",
+      "Number of biosamples processed:  11000000\n",
+      "Number of biosamples processed:  12000000\n",
+      "Number of biosamples processed:  13000000\n",
+      "Number of biosamples processed:  14000000\n",
+      "Number of biosamples processed:  15000000\n",
+      "Number of biosamples processed:  16000000\n",
+      "Number of biosamples processed:  17000000\n",
+      "Number of biosamples processed:  18000000\n",
+      "Number of biosamples processed:  19000000\n",
+      "Number of biosamples processed:  20000000\n",
+      "Number of biosamples processed:  21000000\n",
+      "Number of biosamples processed:  22000000\n",
+      "Number of biosamples processed:  23000000\n",
+      "Number of biosamples processed:  24000000\n",
+      "Number of biosamples processed:  25000000\n",
+      "Number of biosamples processed:  26000000\n",
+      "Number of biosamples processed:  27000000\n",
+      "Number of biosamples processed:  28000000\n",
+      "Number of biosamples processed:  29000000\n",
+      "Number of biosamples processed:  30000000\n",
+      "Number of biosamples processed:  31000000\n",
+      "Number of biosamples processed:  32000000\n",
+      "Finished writing to file\n"
+     ]
+    }
+   ],
+   "source": [
+    "biosamples_path = \"data/biosamples/biosample_set.xml\"\n",
+    "possible_tissue = {\"cell_line\", \"cell_subtype\", \"cell_type\", \"host_tissue_sampled\", \"sample_type\", \"tissue\", \"host_anatomical_part\", \"isolation_source\", \"source_name\", \"source_type\", \"strain\", \"subclone\", \"subgroup\"}\n",
+    "\n",
+    "parser = xml.sax.make_parser()\n",
+    "handler = BioSamplesAttributeHandler(possible_tissue)\n",
+    "parser.setContentHandler(handler)\n",
+    "parser.parse(biosamples_path)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
     "# Matching results to the BTO\n",
     "- using the dictionary of possible tissue terms, a search can be carried out on the BTO to find the matching term\n"
    ]
@@ -14836,19 +14944,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "import keys"
+    "import keys\n",
+    "from time import sleep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of ids:  3326542\n",
+      "Expected number of ids:  3326542\n"
+     ]
+    }
+   ],
    "source": [
     "base_url = \"https://eutils.ncbi.nlm.nih.gov/entrez/eutils/\"\n",
     "query = \"esearch.fcgi?db=biosample&term=blood&retmax=100&usehistory=y\"\n",
@@ -14865,37 +14983,57 @@
     "count = root.find(\"Count\").text\n",
     "\n",
     "\n",
-    "\n",
-    "ids = []\n",
+    "ids = set()\n",
     "for i in root.findall(\"IdList/Id\"):\n",
-    "    ids.append(i.text)"
+    "    ids.add(i.text)\n",
+    "\n",
+    "retmax = 10000\n",
+    "for retstart in range(0, int(count), retmax):\n",
+    "    fetch_url = base_url + \"efetch.fcgi?db=biosample&WebEnv=\" + webenv \n",
+    "    fetch_url += \"&query_key=\" + query_key + \"&retstart=\" + str(retstart) + \"&retmax=\" + str(retmax) \n",
+    "    fetch_url += \"&rettype=uilist&retmode=xml&api_key=\" + keys.ncbi_key\n",
+    "\n",
+    "    fetch_response = requests.get(fetch_url)\n",
+    "    assert fetch_response.status_code == 200, \"Error: \" + str(fetch_response.status_code)\n",
+    "    sleep(0.2) # sleep to avoid overloading the server\n",
+    "    fetch_root = ET.fromstring(fetch_response.content)\n",
+    "    for i in fetch_root.findall(\"Id\"):\n",
+    "        ids.add(i.text)\n",
+    "\n",
+    "print(\"Number of ids: \", len(ids))\n",
+    "print(\"Expected number of ids: \", count)\n",
+    "\n",
+    "# pprint.pprint(ids)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Number of ids with 'blood' in the BTO:  779\n",
+      "94 False Positives\n",
+      "{'832160', '16016553', '33544736', '33504971', '517051', '1157998', '12191993', '528273', '2023613', '34148567', '2271963', '865526', '2282655', '3675248', '519689', '6943924', '13691856', '911242', '934081', '13693299', '29117118', '13626487', '33520202', '1864579', '2278320', '865590', '12197483', '2276754', '784669', '2014880', '16017558', '2016366', '2683459', '3671428', '302869', '2266438', '2460115', '519059', '519521', '218984', '949659', '33543813', '2286190', '979049', '33539189', '909081', '2683759', '524175', '984728', '910382', '520440', '16033835', '2452554', '12193874', '831042', '2021401', '33517707', '3679727', '9827805', '2171996', '2017151', '2159929', '2447029', '22579999', '6944214', '529484', '916604', '2446356', '1925881', '945679', '922416', '8855655', '2271410', '1183519', '2282069', '2010857', '2292257', '6133933', '1223953', '6945860', '528239', '2018405', '9826181', '2276390', '2268649', '12800143', '3660222', '2450509', '530324', '34150553', '2173920', '518279', '33491931', '6941889'}\n",
       "3326542\n",
-      "MCID_6470d5e921869b52b416c1b4\n",
-      "1\n"
+      "False\n"
      ]
     }
    ],
    "source": [
-    "# root = ET.fromstring(response.text)\n",
+    "returned_ids = set(filtered_results.keys())\n",
+    "print(\"Number of ids with 'blood' in the BTO: \", len(returned_ids))\n",
     "\n",
-    "# ids = []\n",
-    "# for i in root.findall(\"IdList/Id\"):\n",
-    "#     ids.append(i.text)\n",
+    "# ids that have returned results but not in the NCBI search - False Positives\n",
+    "set_difference = returned_ids.difference(ids)\n",
     "\n",
-    "print(count)\n",
-    "print(webenv)\n",
-    "print(query_key)\n"
+    "print(len(set_difference), \"False Positives\")\n",
+    "print(set_difference)\n",
+    "\n",
+    "print('33544736' in ids)"
    ]
   }
  ],
