updated tissue and templates noteboooks

--- a/biosamples_templates.ipynb
+++ b/biosamples_templates.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
+      "\n",
+      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import csv\n",
@@ -344,9 +355,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Counting the number of samples with the Generic.1.0 package\n",
+    "### Counting the number of samples with the Generic.1.0 package \n",
     "- samples with the Generic.1.0 package have no set format in the xml\n",
-    "    - may have any attributes so must look through all attributes to find right info"
+    "- may have any attributes so must look through all attributes to find right info"
    ]
   },
   {
@@ -386,6 +397,78 @@
     "parser = xml.sax.make_parser()\n",
     "parser.setContentHandler(BioSamplesGenericHandler())\n",
     "parser.parse(\"data/biosamples/biosample_set.xml\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking SRA information for all samples\n",
+    "- biosamples that have sequence information in the SRA will have an SRA identifier in the data\n",
+    "    - identifier appears in the attributes of the biosample tag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BioSamplesSRAHandler(xml.sax.ContentHandler):\n",
+    "    def __init__(self) -> None:\n",
+    "        super().__init__()\n",
+    "        self.biosample_count = 0\n",
+    "        self.sra_count = 0\n",
+    "\n",
+    "    def startElement(self, name, attrs):\n",
+    "        if name == \"BioSample\":\n",
+    "            self.biosample_count += 1\n",
+    "            if self.biosample_count % 2000000 == 0:\n",
+    "                print(\"Samples read: \", self.biosample_count)\n",
+    "            if attrs[\"accession\"][:3] == \"SAM\":\n",
+    "                self.sra_count += 1\n",
+    "\n",
+    "    def endDocument(self):\n",
+    "        print(\"Number of biosamples: \", self.biosample_count)\n",
+    "        print(\"Number of biosamples with SRA acesssion id: \", self.sra_count)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Samples read:  2000000\n",
+      "Samples read:  4000000\n",
+      "Samples read:  6000000\n",
+      "Samples read:  8000000\n",
+      "Samples read:  10000000\n",
+      "Samples read:  12000000\n",
+      "Samples read:  14000000\n",
+      "Samples read:  16000000\n",
+      "Samples read:  18000000\n",
+      "Samples read:  20000000\n",
+      "Samples read:  22000000\n",
+      "Samples read:  24000000\n",
+      "Samples read:  26000000\n",
+      "Samples read:  28000000\n",
+      "Samples read:  30000000\n",
+      "Samples read:  32000000\n",
+      "Number of biosamples:  32526809\n",
+      "Number of biosamples with SRA acesssion id:  32526809\n"
+     ]
+    }
+   ],
+   "source": [
+    "parser = xml.sax.make_parser()\n",
+    "parser.setContentHandler(BioSamplesSRAHandler())\n",
+    "parser.parse(\"data/biosamples/biosample_set.xml\")"
    ]
   },
   {
