--- a/biosamples_tissue.ipynb
+++ b/biosamples_tissue.ipynb
@@ -14749,113 +14749,6 @@
    "metadata": {},
    "source": [
     "----\n",
-    "# Attribute handler for biosample_set.xml\n",
-    "- same code as above but run on the whole set\n",
-    "- code writes the found information to a csv file in order to not overload memory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class BioSamplesAttributeHandler(xml.sax.ContentHandler):\n",
-    "    def __init__(self, attributes_set) -> None:\n",
-    "        super().__init__()\n",
-    "        self.attributes_set = attributes_set\n",
-    "        self.biosample_id = \"\"\n",
-    "        self.attribute_name = \"\"\n",
-    "        self.biosample_count = 0\n",
-    "        \n",
-    "        with open(\"data/biosamples/results/biosamples_tissue.csv\", \"w\") as f:\n",
-    "            writer = csv.writer(f)\n",
-    "            writer.writerow([\"biosample_id\", \"tissue\"])\n",
-    "\n",
-    "    def startElement(self, name, attrs):\n",
-    "        if name == \"BioSample\":\n",
-    "            self.biosample_id = attrs[\"id\"]\n",
-    "            self.biosample_count += 1\n",
-    "            if self.biosample_count % 1000000 == 0:\n",
-    "                print(\"Number of biosamples processed: \", self.biosample_count)\n",
-    "                \n",
-    "        elif name == \"Attribute\" and \"harmonized_name\" in attrs:\n",
-    "            attribute_name = attrs[\"harmonized_name\"]\n",
-    "            if attribute_name in self.attributes_set:\n",
-    "                self.attribute_name = attribute_name\n",
-    "\n",
-    "    def characters(self, content):\n",
-    "        if self.attribute_name != \"\":\n",
-    "            with open(\"data/biosamples/results/biosamples_tissue.csv\", \"a\") as f:\n",
-    "                writer = csv.writer(f)\n",
-    "                writer.writerow([self.biosample_id, content])\n",
-    "            self.attribute_name = \"\"\n",
-    "\n",
-    "    def endDocument(self):\n",
-    "        print(\"Finished writing to file\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of biosamples processed:  1000000\n",
-      "Number of biosamples processed:  2000000\n",
-      "Number of biosamples processed:  3000000\n",
-      "Number of biosamples processed:  4000000\n",
-      "Number of biosamples processed:  5000000\n",
-      "Number of biosamples processed:  6000000\n",
-      "Number of biosamples processed:  7000000\n",
-      "Number of biosamples processed:  8000000\n",
-      "Number of biosamples processed:  9000000\n",
-      "Number of biosamples processed:  10000000\n",
-      "Number of biosamples processed:  11000000\n",
-      "Number of biosamples processed:  12000000\n",
-      "Number of biosamples processed:  13000000\n",
-      "Number of biosamples processed:  14000000\n",
-      "Number of biosamples processed:  15000000\n",
-      "Number of biosamples processed:  16000000\n",
-      "Number of biosamples processed:  17000000\n",
-      "Number of biosamples processed:  18000000\n",
-      "Number of biosamples processed:  19000000\n",
-      "Number of biosamples processed:  20000000\n",
-      "Number of biosamples processed:  21000000\n",
-      "Number of biosamples processed:  22000000\n",
-      "Number of biosamples processed:  23000000\n",
-      "Number of biosamples processed:  24000000\n",
-      "Number of biosamples processed:  25000000\n",
-      "Number of biosamples processed:  26000000\n",
-      "Number of biosamples processed:  27000000\n",
-      "Number of biosamples processed:  28000000\n",
-      "Number of biosamples processed:  29000000\n",
-      "Number of biosamples processed:  30000000\n",
-      "Number of biosamples processed:  31000000\n",
-      "Number of biosamples processed:  32000000\n",
-      "Finished writing to file\n"
-     ]
-    }
-   ],
-   "source": [
-    "biosamples_path = \"data/biosamples/biosample_set.xml\"\n",
-    "possible_tissue = {\"cell_line\", \"cell_subtype\", \"cell_type\", \"host_tissue_sampled\", \"sample_type\", \"tissue\", \"host_anatomical_part\", \"isolation_source\", \"source_name\", \"source_type\", \"strain\", \"subclone\", \"subgroup\"}\n",
-    "\n",
-    "parser = xml.sax.make_parser()\n",
-    "handler = BioSamplesAttributeHandler(possible_tissue)\n",
-    "parser.setContentHandler(handler)\n",
-    "parser.parse(biosamples_path)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
     "# Matching results to the BTO\n",
     "- using the dictionary of possible tissue terms, a search can be carried out on the BTO to find the matching term\n"
    ]
@@ -15034,6 +14927,113 @@
     "print(set_difference)\n",
     "\n",
     "print('33544736' in ids)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "# Running code on biosample_set.xml\n",
+    "- same attribute handler code as above but run on the whole set\n",
+    "    - code writes the found information to a csv file in order to not overload memory\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BioSamplesAttributeHandler(xml.sax.ContentHandler):\n",
+    "    def __init__(self, attributes_set) -> None:\n",
+    "        super().__init__()\n",
+    "        self.attributes_set = attributes_set\n",
+    "        self.biosample_id = \"\"\n",
+    "        self.attribute_name = \"\"\n",
+    "        self.biosample_count = 0\n",
+    "        \n",
+    "        with open(\"data/biosamples/results/biosamples_tissue.csv\", \"w\") as f:\n",
+    "            writer = csv.writer(f)\n",
+    "            writer.writerow([\"biosample_id\", \"tissue\"])\n",
+    "\n",
+    "    def startElement(self, name, attrs):\n",
+    "        if name == \"BioSample\":\n",
+    "            self.biosample_id = attrs[\"id\"]\n",
+    "            self.biosample_count += 1\n",
+    "            if self.biosample_count % 1000000 == 0:\n",
+    "                print(\"Number of biosamples processed: \", self.biosample_count)\n",
+    "                \n",
+    "        elif name == \"Attribute\" and \"harmonized_name\" in attrs:\n",
+    "            attribute_name = attrs[\"harmonized_name\"]\n",
+    "            if attribute_name in self.attributes_set:\n",
+    "                self.attribute_name = attribute_name\n",
+    "\n",
+    "    def characters(self, content):\n",
+    "        if self.attribute_name != \"\":\n",
+    "            with open(\"data/biosamples/results/biosamples_tissue.csv\", \"a\") as f:\n",
+    "                writer = csv.writer(f)\n",
+    "                writer.writerow([self.biosample_id, content])\n",
+    "            self.attribute_name = \"\"\n",
+    "\n",
+    "    def endDocument(self):\n",
+    "        print(\"Finished writing to file\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of biosamples processed:  1000000\n",
+      "Number of biosamples processed:  2000000\n",
+      "Number of biosamples processed:  3000000\n",
+      "Number of biosamples processed:  4000000\n",
+      "Number of biosamples processed:  5000000\n",
+      "Number of biosamples processed:  6000000\n",
+      "Number of biosamples processed:  7000000\n",
+      "Number of biosamples processed:  8000000\n",
+      "Number of biosamples processed:  9000000\n",
+      "Number of biosamples processed:  10000000\n",
+      "Number of biosamples processed:  11000000\n",
+      "Number of biosamples processed:  12000000\n",
+      "Number of biosamples processed:  13000000\n",
+      "Number of biosamples processed:  14000000\n",
+      "Number of biosamples processed:  15000000\n",
+      "Number of biosamples processed:  16000000\n",
+      "Number of biosamples processed:  17000000\n",
+      "Number of biosamples processed:  18000000\n",
+      "Number of biosamples processed:  19000000\n",
+      "Number of biosamples processed:  20000000\n",
+      "Number of biosamples processed:  21000000\n",
+      "Number of biosamples processed:  22000000\n",
+      "Number of biosamples processed:  23000000\n",
+      "Number of biosamples processed:  24000000\n",
+      "Number of biosamples processed:  25000000\n",
+      "Number of biosamples processed:  26000000\n",
+      "Number of biosamples processed:  27000000\n",
+      "Number of biosamples processed:  28000000\n",
+      "Number of biosamples processed:  29000000\n",
+      "Number of biosamples processed:  30000000\n",
+      "Number of biosamples processed:  31000000\n",
+      "Number of biosamples processed:  32000000\n",
+      "Finished writing to file\n"
+     ]
+    }
+   ],
+   "source": [
+    "biosamples_path = \"data/biosamples/biosample_set.xml\"\n",
+    "possible_tissue = {\"cell_line\", \"cell_subtype\", \"cell_type\", \"host_tissue_sampled\", \"sample_type\", \"tissue\", \"host_anatomical_part\", \"isolation_source\", \"source_name\", \"source_type\", \"strain\", \"subclone\", \"subgroup\"}\n",
+    "\n",
+    "parser = xml.sax.make_parser()\n",
+    "handler = BioSamplesAttributeHandler(possible_tissue)\n",
+    "parser.setContentHandler(handler)\n",
+    "parser.parse(biosamples_path)"
    ]
   }
  ],
