--- a/biosamples_templates.ipynb
+++ b/biosamples_templates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extracting random biosample from the XML file\n",
+    "----\n",
+    "# Extracting random biosamples from the XML file\n",
     "- Extracts num_random_samples samples from the large biosample_set.xml file \n",
     "    - max_samples must be correct in order to select random samples correctly\n",
     "- Random samples are written to the biosample_random_samples.xml file"
@@ -541,86 +542,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of biosamples read:  500000\n",
       "Number of biosamples read:  1000000\n",
-      "Number of biosamples read:  1500000\n",
       "Number of biosamples read:  2000000\n",
-      "Number of biosamples read:  2500000\n",
       "Number of biosamples read:  3000000\n",
-      "Number of biosamples read:  3500000\n",
       "Number of biosamples read:  4000000\n",
-      "Number of biosamples read:  4500000\n",
       "Number of biosamples read:  5000000\n",
-      "Number of biosamples read:  5500000\n",
       "Number of biosamples read:  6000000\n",
-      "Number of biosamples read:  6500000\n",
       "Number of biosamples read:  7000000\n",
-      "Number of biosamples read:  7500000\n",
       "Number of biosamples read:  8000000\n",
-      "Number of biosamples read:  8500000\n",
       "Number of biosamples read:  9000000\n",
-      "Number of biosamples read:  9500000\n",
       "Number of biosamples read:  10000000\n",
-      "Number of biosamples read:  10500000\n",
       "Number of biosamples read:  11000000\n",
-      "Number of biosamples read:  11500000\n",
       "Number of biosamples read:  12000000\n",
-      "Number of biosamples read:  12500000\n",
       "Number of biosamples read:  13000000\n",
-      "Number of biosamples read:  13500000\n",
       "Number of biosamples read:  14000000\n",
-      "Number of biosamples read:  14500000\n",
       "Number of biosamples read:  15000000\n",
-      "Number of biosamples read:  15500000\n",
       "Number of biosamples read:  16000000\n",
-      "Number of biosamples read:  16500000\n",
       "Number of biosamples read:  17000000\n",
-      "Number of biosamples read:  17500000\n",
       "Number of biosamples read:  18000000\n",
-      "Number of biosamples read:  18500000\n",
       "Number of biosamples read:  19000000\n",
-      "Number of biosamples read:  19500000\n",
       "Number of biosamples read:  20000000\n",
-      "Number of biosamples read:  20500000\n",
       "Number of biosamples read:  21000000\n",
-      "Number of biosamples read:  21500000\n",
       "Number of biosamples read:  22000000\n",
-      "Number of biosamples read:  22500000\n",
       "Number of biosamples read:  23000000\n",
-      "Number of biosamples read:  23500000\n",
       "Number of biosamples read:  24000000\n",
-      "Number of biosamples read:  24500000\n",
       "Number of biosamples read:  25000000\n",
-      "Number of biosamples read:  25500000\n",
       "Number of biosamples read:  26000000\n",
-      "Number of biosamples read:  26500000\n",
       "Number of biosamples read:  27000000\n",
-      "Number of biosamples read:  27500000\n",
       "Number of biosamples read:  28000000\n",
-      "Number of biosamples read:  28500000\n",
       "Number of biosamples read:  29000000\n",
-      "Number of biosamples read:  29500000\n",
       "Number of biosamples read:  30000000\n",
-      "Number of biosamples read:  30500000\n",
       "Number of biosamples read:  31000000\n",
-      "Number of biosamples read:  31500000\n",
       "Number of biosamples read:  32000000\n",
-      "Number of biosamples read:  32500000\n",
-      "Number of biosamples read:  32520999\n"
+      "Number of biosamples read:  32525001\n"
      ]
     }
    ],
    "source": [
     "num_random_samples = 10000\n",
-    "max_samples = 32526809\n",
-    "# max_samples = 40618\n",
+    "max_samples = 32526809 # must be set correctly\n",
     "random_samples = set()\n",
     "write_random_sample = False\n",
     "biosample_count = 0\n",
@@ -628,10 +595,9 @@
     "\n",
     "# generate a set of random numbers between 1 and 10000\n",
     "import random\n",
+    "random.seed(1024)\n",
     "while len(random_samples) < num_random_samples:\n",
     "    random_samples.add(random.randint(1, max_samples))\n",
-    "# print(random_samples)\n",
-    "# print(max(random_samples))\n",
     "\n",
     "xml_path = \"data/biosamples/biosample_set.xml\"\n",
     "\n",
