added difference columns to the results csv

--- a/notebooks/tissue_map/tissue_map_1.1.ipynb
+++ b/notebooks/tissue_map/tissue_map_1.1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,9 @@
     "import xml.sax\n",
     "import csv\n",
     "import importlib\n",
-    "import tissue_eval"
+    "import tissue_eval\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -2155,6 +2157,55 @@
     "tissue_eval.attribute_graph(sample_dict)\n",
     "\n",
     "tissue_eval.matches_graph(result_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tissue_map_filepath = '../../data/biosamples/results/'\n",
+    "files = os.listdir(tissue_map_filepath)\n",
+    "\n",
+    "tissue_map_files = [f for f in files if f.startswith('biosample_tissue_locations')]\n",
+    "\n",
+    "# read the first file\n",
+    "v1_0 = pd.read_csv(tissue_map_filepath + tissue_map_files[0])\n",
+    "v1_1 = pd.read_csv(tissue_map_filepath + tissue_map_files[1])\n",
+    "\n",
+    "# creates a new column delta_bto that stores unchanged, gained, lost or changed\n",
+    "v1_1['delta_bto'] = None\n",
+    "v1_1['delta_attrs'] = None\n",
+    "\n",
+    "for index, row in v1_1.iterrows():\n",
+    "    if pd.isnull(row['bto_label']) and pd.isnull(v1_0.loc[index]['bto_label']):\n",
+    "        delta_bto = 'unchanged'\n",
+    "    elif row['bto_label'] == v1_0.loc[index]['bto_label']:\n",
+    "        delta_bto = 'unchanged'\n",
+    "    elif pd.isnull(row['bto_label']):\n",
+    "        delta_bto = 'lost'\n",
+    "    elif pd.isnull(v1_0.loc[index]['bto_label']):\n",
+    "        delta_bto = 'gained'\n",
+    "    else:\n",
+    "        delta_bto = 'changed'\n",
+    "\n",
+    "    if pd.isnull(row['attrs']) and pd.isnull(v1_0.loc[index]['attrs']):\n",
+    "        delta_attrs = 'unchanged'\n",
+    "    elif row['attrs'] == v1_0.loc[index]['attrs']:\n",
+    "        delta_attrs = 'unchanged'\n",
+    "    elif pd.isnull(row['attrs']):\n",
+    "        delta_attrs = 'lost'\n",
+    "    elif pd.isnull(v1_0.loc[index]['attrs']):\n",
+    "        delta_attrs = 'gained'\n",
+    "    else:\n",
+    "        delta_bto = 'changed'\n",
+    "\n",
+    "    v1_1.loc[index, 'delta_bto'] = delta_bto\n",
+    "    v1_1.loc[index, 'delta_attrs'] = delta_attrs\n",
+    "\n",
+    "# add the new columns to the original file\n",
+    "v1_1.to_csv(tissue_map_filepath + 'biosample_tissue_locations_1.1.csv', index=False)"
    ]
   }
  ],
