updated tissue_map_2.2 issues

--- a/notebooks/tissue_map/tissue_map_2.2.ipynb
+++ b/notebooks/tissue_map/tissue_map_2.2.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "\n",
     "## Issues\n",
-    "\n"
+    "- Creates may falso positives from having 'cell' as an optional term\n"
    ]
   },
   {
