updated patterns and content json

--- a/notebooks/tissue_map/tissue_map_2.4.ipynb
+++ b/notebooks/tissue_map/tissue_map_2.4.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,23 +225,51 @@
     "# - biosamples_random_content.jsonl contains text from the title, paragraph, and attributes of each BioSample\n",
     "import json\n",
     "\n",
+    "numbers_pattern = r'^[\\d\\. ]*$'\n",
+    "punct_pattern = r\"\\ *[_&<>:-]+\\ *\"\n",
+    "\n",
+    "def not_tissue_term(content_str):\n",
+    "    not_tissue_terms = {'not provided', 'not applicable', 'not collected', 'not available', 'none', 'undetected', 'unknown', 'none detected', 'na', 'missing', 'no', 'yes', 'n/a', 'true', 'false', 'dna', 'male', 'female', 'animal', 'public', 'human'}\n",
+    "    if re.match(numbers_pattern, content_str):\n",
+    "        return True\n",
+    "    if content_str in not_tissue_terms:\n",
+    "        return True\n",
+    "    if len(content_str) < 3:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "redundant_end_terms = {'tissue', 'tissues', 'cell', 'cells'}\n",
     "with open('patterns.jsonl', 'w') as f:\n",
-    "    for pattern in patterns:\n",
+    "    for bto_term in bto_values:\n",
+    "        pattern = [{'LOWER': token.lower_} for token in tokenizer(bto_term)]\n",
+    "        if pattern[-1]['LOWER'] in redundant_end_terms:\n",
+    "            pattern[-1]['OP'] = '?'\n",
     "        pattern_dict = {'label': 'BTO', 'pattern': pattern}\n",
     "        f.write(json.dumps(pattern_dict) + '\\n')\n",
+    "\n",
     "\n",
     "\n",
     "with open('biosamples_random_content.jsonl', 'w') as f:\n",
     "    for biosample_id, content in sample_dict.items():\n",
     "        if 'title' in content:\n",
-    "            content_dict = {'text': content['title'], 'meta': {'source': 'title', 'biosample_id': biosample_id}}\n",
+    "            term = re.sub(punct_pattern, \" \", content['title'])\n",
+    "            if not_tissue_term(term):\n",
+    "                continue\n",
+    "            content_dict = {'text': term, 'meta': {'source': 'title', 'biosample_id': biosample_id}}\n",
     "            f.write(json.dumps(content_dict) + '\\n')\n",
     "        if 'paragraph' in content:\n",
-    "            content_dict = {'text': content['paragraph'], 'meta': {'source': 'paragraph', 'biosample_id': biosample_id}}\n",
+    "            term = re.sub(punct_pattern, \" \", content['paragraph'])\n",
+    "            if not_tissue_term(term):\n",
+    "                continue\n",
+    "            content_dict = {'text': term, 'meta': {'source': 'paragraph', 'biosample_id': biosample_id}}\n",
     "            f.write(json.dumps(content_dict) + '\\n')\n",
     "        if 'attributes' in content:\n",
     "            for attribute in content['attributes']:\n",
-    "                content_dict = {'text': content['attributes'][attribute], 'meta': {'source': 'attribute:' + attribute, 'biosample_id': biosample_id}}\n",
+    "                term = re.sub(punct_pattern, \" \", content['attributes'][attribute])\n",
+    "                if not_tissue_term(term):\n",
+    "                    continue\n",
+    "                content_dict = {'text': term, 'meta': {'source': 'attribute:' + attribute, 'biosample_id': biosample_id}}\n",
     "                f.write(json.dumps(content_dict) + '\\n')\n"
    ]
   },
