--- a/notebooks/tissue_map/tissue_map_2.3.ipynb
+++ b/notebooks/tissue_map/tissue_map_2.3.ipynb
@@ -15,8 +15,9 @@
     "\n",
     "\n",
     "## Issues\n",
-    "- Can exclude proper nouns when looking for tissue terms to give fewer false positives\n",
+    "- Can use POS tagging from spacy to reduce numebr of false positives\n",
     "    - BTO matches should only be nouns or adjectives\n",
+    "    - Issues arise when 'normal' nouns are capitalised\n",
     "- 'INSDC center name' gives some false positives\n",
     "- Paragraph can have 'too much' information\n",
     "- Cam look at attribute names vs title vs paragraph for ranking relevance of terms\n",
@@ -25,9 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
+      "\n",
+      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from owlready2 import *\n",
     "import pandas as pd\n",
@@ -43,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +300,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of positive results: 5309\n",
+      "Number of negative results: 4691\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_samples = {key: value for key, value in matches_dict.items() if len(value) > 0}\n",
+    "negative_samples = {key: value for key, value in matches_dict.items() if len(value) == 0}\n",
+    "print('Number of positive results:', len(positive_samples))\n",
+    "print('Number of negative results:', len(negative_samples))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -301,8 +334,6 @@
    ],
    "source": [
     "# take the whole attribute stuff to check results\n",
-    "\n",
-    "\n",
     "with open('../../data/biosamples/results/biosample_tissue_locations_2.3.csv', 'w') as f:\n",
     "    writer = csv.writer(f)\n",
     "    writer.writerow(['biosample_accession_id', 'biosample_url', 'title_match', 'paragraph_match', 'attribute_matches'])\n",
@@ -324,11 +355,159 @@
     "                    for token in match:\n",
     "                        attribute_matches += token.text + ' '\n",
     "        \n",
-    "        biosample_url = f'https://www.ncbi.nlm.nih.gov/biosample/{biosample_id}'\n",
-    "        writer.writerow([biosample_id, biosample_url, title_match, paragraph_match, attribute_matches])\n",
+    "        url = f'https://www.ncbi.nlm.nih.gov/biosample/{biosample_id}'\n",
+    "        writer.writerow([biosample_id, url, title_match, paragraph_match, attribute_matches])\n",
     "\n",
     "\n",
     "print('Finished writing results to CSV file')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_32669/4270646700.py:6: DeprecationWarning: Sampling from a set deprecated\n",
+      "since Python 3.9 and will be removed in a subsequent version.\n",
+      "  random_positive_samples = random.sample(positive_samples.items(), 50)\n",
+      "/tmp/ipykernel_32669/4270646700.py:7: DeprecationWarning: Sampling from a set deprecated\n",
+      "since Python 3.9 and will be removed in a subsequent version.\n",
+      "  random_negative_samples = random.sample(negative_samples.items(), 50)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creates a csv file of 50 random positive and negative samples for annotation\n",
+    "# DO NOT RERUN\n",
+    "import random\n",
+    "random.seed(42)\n",
+    "\n",
+    "random_positive_samples = random.sample(positive_samples.items(), 50)\n",
+    "random_negative_samples = random.sample(negative_samples.items(), 50)\n",
+    "\n",
+    "random_positive_samples = {key: value for key, value in random_positive_samples}\n",
+    "random_negative_samples = {key: value for key, value in random_negative_samples}\n",
+    " \n",
+    "with open('../../data/biosamples/random_positive_samples.csv', 'w') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow(['biosample_id', 'url', 'title', 'paragraph', 'attributes', 'eval'])\n",
+    "    for biosample_id, matches in random_positive_samples.items():\n",
+    "        title_match = ''\n",
+    "        paragraph_match = ''\n",
+    "        attribute_matches = ''\n",
+    "\n",
+    "        for match_type, match in matches.items():\n",
+    "            if match_type == 'title':\n",
+    "                for token in match:\n",
+    "                    title_match += token.text + ' '\n",
+    "            elif match_type == 'paragraph':\n",
+    "                for token in match:\n",
+    "                    paragraph_match += token.text + ' '\n",
+    "            elif match_type == 'attributes':\n",
+    "                for attribute, match in match.items():\n",
+    "                    attribute_matches += f'{attribute},'\n",
+    "                    for token in match:\n",
+    "                        attribute_matches += token.text + ' '\n",
+    "        url = f'https://www.ncbi.nlm.nih.gov/biosample/{biosample_id}'\n",
+    "        writer.writerow([biosample_id, url, title_match, paragraph_match, attribute_matches])\n",
+    "\n",
+    "with open('../../data/biosamples/random_negative_samples.csv', 'w') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow(['biosample_id', 'url', 'title', 'paragraph', 'attributes', 'eval'])\n",
+    "    for biosample_id, matches in random_negative_samples.items():\n",
+    "        if len(matches) > 0:\n",
+    "            continue\n",
+    "        title_match = ''\n",
+    "        paragraph_match = ''\n",
+    "        attribute_matches = ''\n",
+    "\n",
+    "        for match_type, match in matches.items():\n",
+    "            if match_type == 'title':\n",
+    "                for token in match:\n",
+    "                    title_match += token.text + ' '\n",
+    "            elif match_type == 'paragraph':\n",
+    "                for token in match:\n",
+    "                    paragraph_match += token.text + ' '\n",
+    "            elif match_type == 'attributes':\n",
+    "                for attribute, match in match.items():\n",
+    "                    attribute_matches += f'{attribute},'\n",
+    "                    for token in match:\n",
+    "                        attribute_matches += token.text + ' '\n",
+    "        url = f'https://www.ncbi.nlm.nih.gov/biosample/{biosample_id}'\n",
+    "        writer.writerow([biosample_id, url, title_match, paragraph_match, attribute_matches])\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 100 positive and 100 negative examples maually annotated to compare to found results\n",
+    "\n",
+    "### False positives\n",
+    "- 'Null' being flagged as a term due to the weaker matcher being used when there are no matches\n",
+    "- Whole term not being correctly captured due to partial term matches in BRENDA\n",
+    "    - crude oil -> oil secretion\n",
+    "- Weaker matches not being taken if there are existing matches in the biosample\n",
+    "- Reversed word order of some terms in BRENDA not captured by the matcher\n",
+    "    - 'epithelial buccal cells' != 'buccal epithelial cells'\n",
+    "- Plurals not correctly captured\n",
+    "- Some terms not included in BRENDA\n",
+    "    - mediodorsal nucleus of the thalamus\n",
+    "    - lateral habenula\n",
+    "    - right femoral head\n",
+    "- Center name and other attributes giving confounding results\n",
+    "\n",
+    "### False Negatives\n",
+    "- Meaning not captured correctly for descriptions of sites\n",
+    "- Some terms not included in BRENDA\n",
+    "- Terms missed due to attirbute names not being listed as 'confident'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True positives: 72\n",
+      "False positives: 28\n",
+      "True negatives: 98\n",
+      "False negatives: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('../../data/biosamples/random_positive_samples.csv', 'r') as f:\n",
+    "    df = pd.read_csv(f)\n",
+    "    false_positives = df[df['eval'] == 'F'].shape[0]\n",
+    "    true_positives = 100 - false_positives\n",
+    "\n",
+    "    print('True positives:', true_positives)\n",
+    "    print('False positives:', false_positives)\n",
+    "    # uncomment to view reasons for all false positives\n",
+    "    # for row in df[df['eval'] == 'F'].iterrows():\n",
+    "    #     print(row[1]['biosample_id'], ':', row[1]['notes'])\n",
+    "\n",
+    "with open('../../data/biosamples/random_negative_samples.csv', 'r') as f:\n",
+    "    df = pd.read_csv(f)\n",
+    "    false_negatives = df[df['eval'] == 'F'].shape[0]\n",
+    "    true_negatives = 100 - false_negatives\n",
+    "\n",
+    "    print('True negatives:', true_negatives)\n",
+    "    print('False negatives:', false_negatives)\n",
+    "    # uncomment to view reasons for all false negatives\n",
+    "    # for row in df[df['eval'] == 'F'].iterrows():\n",
+    "    #     print(row[1]['biosample_id'], ':', row[1]['notes'])\n",
+    "    "
    ]
   }
  ],
