--- a/notebooks/tissue_map/tissue_map_2.3.ipynb
+++ b/notebooks/tissue_map/tissue_map_2.3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -364,17 +364,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_32669/4270646700.py:6: DeprecationWarning: Sampling from a set deprecated\n",
+      "/tmp/ipykernel_53219/4270646700.py:6: DeprecationWarning: Sampling from a set deprecated\n",
       "since Python 3.9 and will be removed in a subsequent version.\n",
       "  random_positive_samples = random.sample(positive_samples.items(), 50)\n",
-      "/tmp/ipykernel_32669/4270646700.py:7: DeprecationWarning: Sampling from a set deprecated\n",
+      "/tmp/ipykernel_53219/4270646700.py:7: DeprecationWarning: Sampling from a set deprecated\n",
       "since Python 3.9 and will be removed in a subsequent version.\n",
       "  random_negative_samples = random.sample(negative_samples.items(), 50)\n"
      ]
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,10 @@
       "True positives: 72\n",
       "False positives: 28\n",
       "True negatives: 98\n",
-      "False negatives: 2\n"
+      "False negatives: 2\n",
+      "\n",
+      "Specificity: 0.7777777777777778\n",
+      "Sensitivity: 0.972972972972973\n"
      ]
     }
    ],
@@ -507,6 +510,11 @@
     "    # uncomment to view reasons for all false negatives\n",
     "    # for row in df[df['eval'] == 'F'].iterrows():\n",
     "    #     print(row[1]['biosample_id'], ':', row[1]['notes'])\n",
+    "\n",
+    "\n",
+    "print()\n",
+    "print('Specificity:', true_negatives / (true_negatives + false_positives))\n",
+    "print('Sensitivity:', true_positives / (true_positives + false_negatives))\n",
     "    "
    ]
   }
