--- a/notebooks/tissue_map/tissue_map_2.4.ipynb
+++ b/notebooks/tissue_map/tissue_map_2.4.ipynb
@@ -5,29 +5,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Version 2.3\n",
-    "- Removed the optional terms from the matcher\n",
-    "- Set all information taken from the XML file to lowercase\n",
-    "- Added option to check for attribute name if there are no matches\n",
-    "    - Will get fewer false positives from optional terms\n",
-    "    - Set of attribute names reduced to attributes with confidence\n",
-    "    - New check for attribute names uses a weaker matcher that allow optional terms\n",
+    "# Version 2.4\n",
+    "- \n",
     "\n",
     "\n",
     "## Issues\n",
-    "- Can exclude proper nouns when looking for tissue terms to give fewer false positives\n",
-    "    - BTO matches should only be nouns or adjectives\n",
-    "- 'INSDC center name' gives some false positives\n",
-    "- Paragraph can have 'too much' information\n",
-    "- Cam look at attribute names vs title vs paragraph for ranking relevance of terms\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
+      "\n",
+      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from owlready2 import *\n",
     "import pandas as pd\n",
@@ -226,7 +227,7 @@
     "import json\n",
     "\n",
     "numbers_pattern = r'^[\\d\\. ]*$'\n",
-    "punct_pattern = r\"\\ *[_&<>:-]+\\ *\"\n",
+    "punct_pattern = r'\\ *[_&<>:-]+\\ *'\n",
     "\n",
     "def not_tissue_term(content_str):\n",
     "    not_tissue_terms = {'not provided', 'not applicable', 'not collected', 'not available', 'none', 'undetected', 'unknown', 'none detected', 'na', 'missing', 'no', 'yes', 'n/a', 'true', 'false', 'dna', 'male', 'female', 'animal', 'public', 'human'}\n",
@@ -382,7 +383,7 @@
     "# take the whole attribute stuff to check results\n",
     "\n",
     "\n",
-    "with open('../../data/biosamples/results/biosample_tissue_locations_2.3.csv', 'w') as f:\n",
+    "with open('../../data/biosamples/results/biosample_tissue_locations_2.4.csv', 'w') as f:\n",
     "    writer = csv.writer(f)\n",
     "    writer.writerow(['biosample_accession_id', 'biosample_url', 'title_match', 'paragraph_match', 'attribute_matches'])\n",
     "    for biosample_id, matches in matches_dict.items():\n",
@@ -408,6 +409,22 @@
     "\n",
     "\n",
     "print('Finished writing results to CSV file')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load('en_core_web_lg')\n",
+    "\n",
+    "for token in nlp('Sjaelland'):\n",
+    "    print(token.text, token.lemma_, token.pos_, token.tag_, token.dep_,\n",
+    "            token.shape_, token.is_alpha, token.is_stop)\n",
+    "    \n",
+    "for ent in nlp('Sjaelland').ents:\n",
+    "    print(ent.text, ent.label_)"
    ]
   }
  ],
