updated working copy of tissue_map

--- a/notebooks/tissue_map/tissue_map.ipynb
+++ b/notebooks/tissue_map/tissue_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,12 @@
     "from spacy.matcher import Matcher\n",
     "from spacy.tokenizer import Tokenizer\n",
     "import xml.sax\n",
-    "import json\n"
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,24 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BTO_0000538\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(labels_reverse['alveolar type 2'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,6 +103,7 @@
     "        self.is_paragraph = False\n",
     "        self.is_sra = False\n",
     "        self.sra_id = ''\n",
+    "        self.count = 0\n",
     "    \n",
     "    def startDocument(self):\n",
     "        open(self.tmp_file, 'w').close()\n",
@@ -193,6 +177,9 @@
     "            self.cur_dict = {}\n",
     "            self.biosample_id = ''\n",
     "            self.sra_id = ''\n",
+    "            self.count += 1\n",
+    "            if self.count % 1000000 == 0:\n",
+    "                print(self.count, \"samples parsed\")\n",
     "\n",
     "\n",
     "    def endDocument(self):\n",
@@ -202,13 +189,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1000000 samples parsed\n",
+      "2000000 samples parsed\n",
+      "3000000 samples parsed\n",
+      "4000000 samples parsed\n",
+      "5000000 samples parsed\n",
+      "6000000 samples parsed\n",
+      "7000000 samples parsed\n",
+      "8000000 samples parsed\n",
+      "9000000 samples parsed\n",
+      "10000000 samples parsed\n",
+      "11000000 samples parsed\n",
+      "12000000 samples parsed\n",
+      "13000000 samples parsed\n",
+      "14000000 samples parsed\n",
+      "15000000 samples parsed\n",
+      "16000000 samples parsed\n",
+      "17000000 samples parsed\n",
+      "18000000 samples parsed\n",
+      "19000000 samples parsed\n",
+      "20000000 samples parsed\n",
+      "21000000 samples parsed\n",
+      "22000000 samples parsed\n",
+      "23000000 samples parsed\n",
+      "24000000 samples parsed\n",
+      "25000000 samples parsed\n",
+      "26000000 samples parsed\n",
+      "27000000 samples parsed\n",
+      "28000000 samples parsed\n",
+      "29000000 samples parsed\n",
+      "30000000 samples parsed\n",
+      "31000000 samples parsed\n",
+      "32000000 samples parsed\n",
+      "33000000 samples parsed\n",
       "Finished parsing BioSamples XML file\n"
      ]
     }
@@ -219,10 +239,10 @@
     "\n",
     "# parse the BioSamples XML file\n",
     "parser = xml.sax.make_parser()\n",
-    "handler = BioSamplesHandler(sample_dict, positive_attributes, 'tmp.jsonl', 'output.jsonl')\n",
+    "handler = BioSamplesHandler(sample_dict, positive_attributes, '/home/ec2-user/workspace/data/results/tmp.jsonl', '/home/ec2-user/workspace/data/results/output.jsonl')\n",
     "parser.setContentHandler(handler)\n",
     "\n",
-    "parser.parse('../../data/biosamples/biosample_random_samples.xml')\n"
+    "parser.parse('/home/ec2-user/workspace/data/biosample_set.xml')\n"
    ]
   }
  ],
