updated first pass for tissue_map working copy

--- a/notebooks/tissue_map/tissue_map.ipynb
+++ b/notebooks/tissue_map/tissue_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,33 @@
     "from spacy.matcher import Matcher\n",
     "from spacy.tokenizer import Tokenizer\n",
     "import xml.sax\n",
-    "import json"
+    "import json\n",
+    "import re"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pass 1:\n",
+    "- finds matches from a set of confident attributes using a Spacy matcher\n",
+    "    - preprocessing performed to remove punctuation adn convert to lowercase\n",
+    "- samples with no matches have attributes, title, and paragraph written to the "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def preprocess(input_str):\n",
+    "    punct_pattern = r'\\ *[_&<>:-]+\\ *'\n",
+    "    input_str = re.sub(punct_pattern, ' ', input_str)\n",
+    "    return input_str.lower().strip()\n",
+    "\n",
     "# load the BRENDA ontology\n",
-    "onto_path.append(\"../../data/ontologies/\")\n",
     "onto = get_ontology('http://purl.obolibrary.org/obo/bto.owl').load()\n",
     "\n",
     "# load classes and synonyms\n",
@@ -30,13 +46,14 @@
     "\n",
     "# add additional synonyms\n",
     "class_synonyms['BTO_0000440'] += ['stool']\n",
+    "class_synonyms['BTO_0005238'] += ['HEK293-T-REx']\n",
     "\n",
     "# create a reverse mapping of labels to BRENDA ids\n",
     "# reverse mapping removes redundant end terms from the key where possible\n",
     "redundant_end_terms = ('tissue', 'tissues', 'cell', 'cells')\n",
     "\n",
-    "classes_reverse = {c.label.first().lower().strip(): c.name for c in onto.classes() if c.label != []}\n",
-    "class_synonyms_reverse = {s.lower().strip(): c for c, syn in class_synonyms.items() for s in syn}\n",
+    "classes_reverse = {preprocess(c.label.first()): c.name for c in onto.classes() if c.label != []}\n",
+    "class_synonyms_reverse = {preprocess(s): c for c, syn in class_synonyms.items() for s in syn}\n",
     "labels_reverse = {**classes_reverse, **class_synonyms_reverse}\n",
     "\n",
     "additional_labels = {}\n",
@@ -48,37 +65,25 @@
     "    if key not in labels_reverse:\n",
     "        labels_reverse[key] = value\n",
     "\n",
-    "\n",
-    "# flatten the labels and synonyms into a single set\n",
-    "class_labels = {c for c in classes.values() if c is not None}\n",
-    "class_synonyms_flattend = {s for syn in class_synonyms.values() for s in syn}\n",
-    "bto_values = class_labels.union(class_synonyms_flattend)\n",
-    "\n",
     "nlp = spacy.load(\"en_core_web_lg\")\n",
+    "# blank matcher with vocab from the large model\n",
     "matcher = Matcher(nlp.vocab)\n",
+    "# standard tokenizer from spacy\n",
     "tokenizer = Tokenizer(nlp.vocab)\n",
     "\n",
-    "redundant_end_terms = ['tissue', 'tissues', 'cell', 'cells']\n",
     "patterns = []\n",
+    "for label in labels_reverse.keys():\n",
+    "    if label != '':\n",
+    "        tokens = tokenizer(label)\n",
+    "        pattern = [{'LOWER': token.lower_} for token in tokens]\n",
+    "        patterns.append(pattern)\n",
     "\n",
-    "for bto_value in bto_values:\n",
-    "    weak_pattern = [{'LOWER': token.lower_} for token in tokenizer(bto_value)]\n",
-    "    if weak_pattern[-1]['LOWER'] in redundant_end_terms:\n",
-    "        weak_pattern[-1]['OP'] = '?'\n",
-    "    patterns.append(weak_pattern)\n",
-    "\n",
-    "matcher.add(\"bto\", patterns=patterns, greedy=\"LONGEST\")\n",
-    "\n",
-    "# adds a regex pattern to the default tokenizer to split on underscores\n",
-    "underscore_tokenizer = nlp.tokenizer\n",
-    "infixes = nlp.Defaults.infixes + [r'[_~]']\n",
-    "infix_re = spacy.util.compile_infix_regex(infixes)\n",
-    "tokenizer.infix_finditer = infix_re.finditer\n"
+    "matcher.add(\"bto\", patterns, greedy=\"LONGEST\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +95,7 @@
     "    - Found values written to provided sample_dict with the biosample_id as the key\n",
     "    '''\n",
     "\n",
-    "    def __init__(self, sample_dict, positive_attributes, tmp_file, output_file):\n",
-    "        self.sample_dict = sample_dict\n",
+    "    def __init__(self, positive_attributes, tmp_file, output_file):\n",
     "        self.positive_attributes = positive_attributes\n",
     "        self.tmp_file = tmp_file\n",
     "        self.output_file = output_file\n",
@@ -145,19 +149,19 @@
     "            intersect = set(self.attributes.keys()).intersection(self.positive_attributes)\n",
     "            matches = []\n",
     "            if len(intersect) == 1:\n",
-    "                attribute_value = self.attributes[list(intersect)[0]]\n",
+    "                attribute_value = preprocess(self.attributes[list(intersect)[0]])\n",
     "                # check if the attribute value is a BTO term using the matcher\n",
-    "                attribute_tokens = underscore_tokenizer(attribute_value)\n",
+    "                attribute_tokens = tokenizer(attribute_value)\n",
     "                matches = matcher(attribute_tokens, as_spans=True)\n",
     "            elif len(intersect) > 1:\n",
     "                # if there are multiple positive attributes, check if any of the values are BTO terms\n",
     "                for attribute in intersect:\n",
-    "                    attribute_value = self.attributes[attribute]\n",
-    "                    attribute_tokens = underscore_tokenizer(attribute_value)\n",
+    "                    attribute_value = preprocess(self.attributes[attribute])\n",
+    "                    attribute_tokens = tokenizer(attribute_value)\n",
     "                    matches += matcher(attribute_tokens, as_spans=True)\n",
     "\n",
     "            if matches == []:\n",
-    "                # no matches found, write to file\n",
+    "                # no matches found, write the biosample content to a tmp file for second pass\n",
     "                with open(self.tmp_file, 'a') as f:\n",
     "                    self.cur_dict['biosample_id'] = self.biosample_id\n",
     "                    self.cur_dict['attributes'] = self.attributes\n",
@@ -165,9 +169,9 @@
     "                    json.dump(self.cur_dict, f)\n",
     "                    f.write('\\n')\n",
     "            else:\n",
-    "                # matches found, add to sample_dict\n",
-    "                tissue_matches = ','.join([m.text for m in matches])\n",
-    "                bto_matches = ','.join([labels_reverse[m.text.lower()] for m in matches])\n",
+    "                # matches found, add to output file\n",
+    "                tissue_matches = ','.join({m.text for m in matches})\n",
+    "                bto_matches = ','.join({labels_reverse[m.text.lower()] for m in matches})\n",
     "                with open(self.output_file, 'a') as f:\n",
     "                    json.dump({'biosample_id': self.biosample_id , 'sra_id': self.sra_id, 'tissue': tissue_matches, 'bto_matches': bto_matches}, f)\n",
     "                    f.write('\\n')\n",
@@ -188,8 +192,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some BioSample entries have no SRA identifier listed but SRA data is available from the link:\n",
+    "https://www.ncbi.nlm.nih.gov/sra?LinkName=biosample_sra&from_uid=BIOSAMPLE_NUMERICAL\n",
+    "\n",
+    "where BIOSAMPLE_ID is the numerical ID of the biosample"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -234,12 +249,11 @@
     }
    ],
    "source": [
-    "positive_attributes = {'tissue', 'cell_type', 'cell_line', 'cell_subtype', 'source_name', 'host_tissue_sampled'}\n",
-    "sample_dict = {}\n",
+    "positive_attributes = {'tissue', 'cell_type', 'cell_line', 'cell_subtype', 'source_name', 'host_tissue_sampled', 'body_habitat', 'body_product', 'host_body_product', 'host_body_habitat'}\n",
     "\n",
     "# parse the BioSamples XML file\n",
     "parser = xml.sax.make_parser()\n",
-    "handler = BioSamplesHandler(sample_dict, positive_attributes, '/home/ec2-user/workspace/data/results/tmp.jsonl', '/home/ec2-user/workspace/data/results/output.jsonl')\n",
+    "handler = BioSamplesHandler(positive_attributes, '/home/ec2-user/workspace/data/results/tissue_tmp_1.jsonl', '/home/ec2-user/workspace/data/results/tissue_output.jsonl')\n",
     "parser.setContentHandler(handler)\n",
     "\n",
     "parser.parse('/home/ec2-user/workspace/data/biosample_set.xml')\n"
